# Fraction-Calculator

./: .gitignore  CMakeLists.txt  README.md
apps/: Fraction_CLI.cpp
include/: Fraction.h
src/: Fraction.cpp  main.cpp
